welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: '(' expected but identifier found.
      if estDosMur()
         ^